# ChangeLog for net-www/mod_auth_external
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_external/ChangeLog,v 1.13 2005/01/30 20:36:53 hollow Exp $

  30 Jan 2005; Benedikt Boehm <hollow@gentoo.org> metadata.xml,
  -mod_auth_external-2.2.3.ebuild:
  fixed metadata. removed old 2.2.3

  22 Jan 2005; Christian Parpart <trapni@gentoo.org>
  +digest-mod_auth_external-2.2.7-r1,
  +files/2.2.7-r1/10_mod_auth_external.conf:
  Apache Herd Package Refresh

  20 Jun 2004; Chuck Short <zul@gentoo.org> mod_auth_external-2.2.3.ebuild,
  mod_auth_external-2.2.7.ebuild:
  Ebuild cleanups.

  26 May 2004; <chuck@gentoo.org> mod_auth_external-2.2.7.ebuild:
  Added missing ${FILESDIR}.

  26 May 2004; <chuck@gentoo.org> files/mod_auth_external-2.2.7-gentoo.diff:
  Added missing patch. Closes #51915.

  24 May 2004; Chuck Short <zul@gentoo.org> mod_auth_external-2.2.7.ebuild:
  Ebuild cleanups. Marked stable.

*mod_auth_external-2.2.7 (08 May 2004)

  08 May 2004; Chuck Short <zul@gentoo.org> mod_auth_external-2.2.7.ebuild:
  Version bump, helps close #48559.

  31 Mar 2004; Chuck Short <zul@gentoo.org> metadata.xml,
  files/10_mod_auth_external.conf:
  Added metadata.xml.

  31 Mar 2004; Chuck Short <zul@gentoo.org> files/10_mod_auth_external.conf:
  Fixed typo in 10_mod_auth_external.conf file. Fixes 40621.

  14 Jan 2004; Robin H. Johnson <robbat2@gentoo.org>
  mod_auth_external-2.2.3.ebuild:
  fix bug #38040.

  12 Jul 2003; Donny Davies <woodchip@gentoo.org>
  mod_auth_external-2.2.3.ebuild:
  Marked x86 stable.

*mod_auth_external-2.2.3 (28 Nov 2002)

  28 Nov 2002; Donny Davies <woodchip@gentoo.org> :
  Initial import; created by me.