@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mod_auth_external
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_external/ChangeLog,v 1.13 2005/01/30 20:36:53 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_external/ChangeLog,v 1.14 2005/02/17 10:13:59 hollow Exp $
+
+*mod_auth_external-2.2.9 (17 Feb 2005)
+
+  17 Feb 2005; Benedikt Boehm <hollow@gentoo.org>
+  +mod_auth_external-2.1.19.ebuild, +mod_auth_external-2.2.9.ebuild:
+  version bump + apache 1.3 support (2.1.19)
 
   30 Jan 2005; Benedikt Boehm <hollow@gentoo.org> metadata.xml,
   -mod_auth_external-2.2.3.ebuild:
